# matscipy

./: .buildinfo  .cirrus.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.before_install.bash  .travis.before_script.bash  .travis.yml  AUTHORS  CITATION.cff  CONTRIBUTING.md  ChangeLog.md  HCOOH.cfg  LICENSE.HEADER  MANIFEST.in  README.md  README.rst  TEST_OPTIMIZATION_RECOMMENDATIONS.md  api.html  conf.html  discover_version.py  env.sh  genindex.html  getting_started.html  index.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  renovate.json  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.out  test.py
_sources/: api.rst.txt  conf.py.txt
_static/: documentation_options.js
applications/: cylinder_configurations.html  elastic_constants.html  electrochemistry.html  electrochemistry_1.html  electrochemistry_3.html  fracture_mechanics.html  gamma_surface_advanced.html  index.html  multispecies_dislocations.html  plasticity.html  quadrupole_dislocations.html  quasi_static_crack.html  tribology.html  visualisation.html
c/: angle_distribution.c  angle_distribution.cpp  angle_distribution.h  islands.cpp  islands.h  matscipymodule.c  matscipymodule.h  meson.build  neighbours.c  neighbours.h  ring_statistics.cpp  ring_statistics.h  stack.h  test_stack.cpp  tools.c  tools.h
calculators/: index.html  manybody.html
cli/: calculators.html  diffusion.html  electrochemistry.html  fracture_mechanics.html  index.html  structure.html
docs/: .gitignore  Makefile  api.rst  api_reference.rst  calculators.rst  conf.py  getting_started.rst  index.rst  make.bat  matscipy.calculators.eam.rst  matscipy.calculators.manybody.rst  matscipy.calculators.rst  (+12 more)
matscipy/: __init__.py  _version.py  _version.py.in  angle_distribution.py  atomic_strain.py  cauchy_born.py  checkpoint.py  compat.py  deformation.py  dislocation.py  distributed_computation.py  drift.py  elasticity.py  ffi.py  gamma_surface.py  hessian_finite_differences.py  hydrogenate.py  io.py  logger.py  meson.build  molecules.py  neighbours.py  numerical.py  numpy_tricks.py  opls.py  precon.py  pressurecoupling.py  rings.py  sliding_p.py  socketcalc.py  spatial_correlation_function.py  spatial_correlation_functional.py  surface.py  surface_reconstruction.py  utils.py  visualise.py
matscipy/calculators/: __init__.py  calculator.py  fitting.py  meson.build  molecular_calculator.py  supercell_calculator.py
matscipy/calculators/AbellTersoffBrenner/: __init__.py  calculator.py  parameters.py
matscipy/calculators/EDIPTersoffBrenner/: calculator.py
matscipy/calculators/bop/: __init__.py  calculator.py
matscipy/calculators/bop/explicit_forms/: __init__.py  kumagai.py  stillinger_weber.py  stillinger_weber1.py  stillinger_weber2.py  stillinger_weber3.py  tersoff3.py
matscipy/calculators/bop_sw/: __init__.py  calculator.py
matscipy/calculators/bop_sw/explicit_forms/: __init__.py  kumagai.py  stillinger_weber.py  tersoff3.py
matscipy/calculators/committee/: __init__.py  committee.py  log.py  meson.build  utils.py
matscipy/calculators/eam/: __init__.py  average_atom.py  calculator.py  io.py  meson.build  precon.py
matscipy/calculators/ewald/: __init__.py  calculator.py  meson.build
matscipy/calculators/hades/: __init__.py  cluster_data.py  mcfmFactory.py  multi_cluster_force_mixing.py  qm_cluster.py
matscipy/calculators/hades/mcfmParallel/: __init__.py  mcfmParallelControl.py  mcfmParallelWorker.py
matscipy/calculators/hades/neighbour_list/: neighbour_list.py  neighbour_list_base.py
matscipy/calculators/hades/qmClusterModules/: qm_cluster_object.py  qm_clustering_module.py  qm_flagging_module.py
matscipy/calculators/hydrogel/: __init__.py  calculator.py  hydorgel_cal.py  meson.build
matscipy/calculators/manybody/: __init__.py  calculator.py  meson.build  newmb.py  potentials.py
matscipy/calculators/manybody/explicit_forms/: __init__.py  harmonic.py  kumagai.py  meson.build  stillinger_weber.py  tersoff_brenner.py
matscipy/calculators/mcfm/: __init__.py  calculator.py  cluster_data.py  meson.build  qm_cluster.py
matscipy/calculators/mcfm/mcfm_parallel/: __init__.py  mcfm_parallel_control.py  mcfm_parallel_worker.py  meson.build
matscipy/calculators/mcfm/neighbour_list/: neighbour_list_base.py
matscipy/calculators/mcfm/neighbour_list_mcfm/: meson.build  neighbour_list_base.py  neighbour_list_mcfm.py
matscipy/calculators/mcfm/qm_cluster_tools/: __init__.py  base_qm_cluster_tool.py  meson.build  qm_clustering_tool.py  qm_flagging_tool.py
matscipy/calculators/pair_potential/: __init__.py  calculator.py  meson.build
matscipy/calculators/polydisperse/: __init__.py  calculator.py  meson.build
matscipy/cli/: __init__.py  ase2ovito.py  average_eam_potential.py  meson.build  openovito.py
matscipy/cli/calculators/: meson.build
matscipy/cli/diffusion/: meson.build  rms.py
matscipy/cli/electrochemistry/: README.md  c2d.py  continuous2discrete.py  meson.build  pnp.py  poisson_nernst_planck_solver.py  poisson_nernst_planck_solver_cli.py  stericify.py
matscipy/cli/fracture_mechanics/: meson.build  quasistatic_crack.py  setup_crack.py  sinclair_continuation.py  sinclair_crack.py
matscipy/cli/glasses/: deposition.py  meson.build  quench.py
matscipy/contact_mechanics/: DMT.py  Hertz.py  JKR.py  analysis.py  greens_function.py  meson.build
matscipy/eam/: calculator.py  io.py
matscipy/electrochemistry/: README.md  __init__.py  continuous2discrete.py  meson.build  poisson_boltzmann_distribution.py  poisson_nernst_planck_solver.py  poisson_nernst_planck_solver_fenics.py  poisson_nernst_planck_solver_logc.py  steric_correction.py  steric_distribution.py  utility.py
matscipy/electrochemistry/cli/: NOTE  __init__.py  c2d.py  pnp.py
matscipy/fracture_mechanics/: __init__.py  clusters.py  crack.py  crackpathsel.py  energy_release.py  idealbrittlesolid.py  meson.build  ode.py  solvers.py  thin_strip_utils.py
matscipy/io/: __init__.py  lammps_data.py  lammpsdata.py  meson.build  metis.py  opls.py  tbl.py
matscipy/tool/: __init__.py  meson.build  plot.py
(+416 files in other folders)
