[build-system]
requires = ["meson>=1.0.0", "meson-python>=0.13.0", "ninja", "oldest-supported-numpy"]
build-backend = "mesonpy"

[project]
name = "matscipy"
description = "Generic Python Materials Science tools"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "James Kermode", email = "james.kermode@gmail.com"},
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
requires-python = ">=3.7.0"
dynamic = [ "version" ]
dependencies = [
    "numpy>=1.16.0",
    "scipy>=1.2.3",
    "ase>=3.16.0",
    "looseversion"
]

[project.optional-dependencies]
test = [
    "pytest",
    "sympy",
    "atomman",
    "ovito"
]
docs = [
    "sphinx",
    "myst_nb",
    "nglview",
    "numpydoc",
    "atomman",
    "ovito",
    "sphinx_copybutton",
    "sphinx_rtd_theme",
    "pydata-sphinx-theme"
]

[project.urls]
documentation = "http://libatoms.github.io/matscipy/"
repository = "https://github.com/libAtoms/matscipy"
changelog = "https://github.com/libAtoms/matscipy/blob/master/ChangeLog.md"
