# https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'matscipy/cli'
)

subdir('calculators')
subdir('diffusion')
subdir('electrochemistry')
subdir('fracture_mechanics')
subdir('glasses')
