# https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'analysis.py',
    'DMT.py',
    'greens_function.py',
    'Hertz.py',
    'JKR.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'matscipy/contact_mechanics'
)
