# https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'continuous2discrete.py',
    'poisson_boltzmann_distribution.py',
    'poisson_nernst_planck_solver.py',
    'poisson_nernst_planck_solver_fenics.py',
    'steric_correction.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'matscipy/electrochemistry'
)
