# https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'clusters.py',
    'crack.py',
    'crackpathsel.py',
    'energy_release.py',
    'idealbrittlesolid.py',
    'thin_strip_utils.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'matscipy/fracture_mechanics'
)
