# https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'continuous2discrete_cli.py',
    'poisson_nernst_planck_solver_cli.py',
    'stericify_cli.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'matscipy/cli/electrochemistry'
)
