# https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'quasistatic_crack.py',
    'setup_crack.py',
    'sinclair_continuation.py',
    'sinclair_crack.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'matscipy/cli/fracture_mechanics'
)
