# https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'harmonic.py',
    'kumagai.py',
    'stillinger_weber.py',
    'tersoff_brenner.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'matscipy/calculators/manybody/explicit_forms'
)
