# https://mesonbuild.com/Python-module.html

# Pure Python sources
python_sources = [
    '__init__.py',
    'base_qm_cluster_tool.py',
    'qm_clustering_tool.py',
    'qm_flagging_tool.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'matscipy/calculators/mcfm/qm_cluster_tools'
)
